# standardvisuals

./: .gitignore  README.md  install_hooks.ps1  install_hooks.sh  style_tokens.json  sync_json.py
archive/scripts_antecedentes/: functions_plots.R  utils_diagnostic.R
assets/fonts/Inter/: README.md
examples/: test.R  test.py  ts_pr_daily.csv
pystandarvisuals/: pyproject.toml
pystandarvisuals/src/pystandarvisuals/: __init__.py  colors.py  create_theme_from_tokens.py
pystandarvisuals/src/pystandarvisuals/data/: style_tokens.json
rstandarvisuals/: DESCRIPTION  NAMESPACE
rstandarvisuals/R/: colors.R  create_theme_from_tokens.R
rstandarvisuals/inst/: colors.json  style_tokens.json
rstandarvisuals/man/: create_theme_from_tokens.Rd  get_palette.Rd  list_palettes.Rd  load_colors.Rd
scripts/: generate_example_plots_py.py  generate_example_plots_r.R  generate_palette_preview.py
