[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pystandarvisuals"
version = "0.1.0"
description = "Estilo estándar mínimo para visualizaciones con matplotlib"
requires-python = ">=3.9"
dependencies = ["matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pystandarvisuals = ["data/style_tokens.json"]

